--- a/popup.html
+++ b/popup.html
@@ -14,8 +14,9 @@
     <div class="buttons">
       <button id="start">Start</button>
       <button id="stop">Stop</button>
-      <button id="globalStart">Global Start</button>
-      <button id="globalStop">Global Stop</button>
+      <button id="resume">Resume</button>
+      <button id="pause">Pause</button>
+      <button id="clear">Clear</button>
     </div>
     <h3>Active Tabs</h3>
     <ul id="activeTabs"></ul>
