--- a/popup.html
+++ b/popup.html
@@ -10,12 +10,13 @@
     <h2>Auto Refresh Tab</h2>
     <label for="interval">Interval (seconds):</label>
     <input type="number" id="interval" min="1" value="5">
-    <label><input type="checkbox" id="hardRefresh"> Hard Refresh</label>
+    <div class="checkbox-container">
+      <input type="checkbox" id="hardRefresh">
+      <label for="hardRefresh">Bypass Cache</label>
+    </div>
     <div class="buttons">
       <button id="start">Start</button>
       <button id="stop">Stop</button>
-      <button id="resume">Resume</button>
-      <button id="pause">Pause</button>
       <button id="clear">Clear</button>
     </div>
     <h3>Active Tabs</h3>
